# python-fastapi-docker-scafolding

./: Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh
app/: application.py  dependencies.py
app/router/: base.py  healthcheck.py
tests/: test_app.py
